feat: register multi blocks

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "block-demo",
+	"name": "plugin-blocks",
 	"version": "0.1.0",
 	"description": "Example block scaffolded with Create Block tool.",
 	"author": "The WordPress Contributors",
